# GirdFlux

./: .clang-format  .clang-tidy  .gitignore  AGENTS.example.md  CMakeLists.txt  INDEX.md
docs/: ARCHITECTURE_ALPHA.md  DEMO.md  DESIGN.md  DIRECTORY_TRANSFER.md  ENGINEERING.md  GridFTP传输源码学习笔记.md  OBSERVABILITY.md  PROJECT_STATE.md  ROADMAP.md  SECURITY.md
docs/archive/: PERF_HISTORY_20260524.md  PROJECT_STATE_HISTORY_20260524.md
docs/perf/: 100G_MIGRATION_CHECKLIST.md  BASELINE_FTP_GRIDFTP_SMOKE.md  BETA1A_100G_READINESS.md  BETA1B_DATA_TLS_RESUME_AND_STOR_WRITE.md  BETA1B_RECEIVER_WRITEBACK_OPTIN.md  BETA1B_RECEIVER_WRITEBACK_STABILITY.md  BETA1B_STORAGE_SYSTEM_ATTRIBUTION.md  BETA1B_STOR_WRITEBACK_DIAGNOSIS.md  BETA1C_RETR_STABILITY.md  BETA_PERFORMANCE_SUMMARY.md  CLOUD_DISK_BOTTLENECK_PROOF.md  FTP_GRIDFTP_GRIDFLUX_COMPARISON.md  GRIDFTP_VS_GRIDFLUX_CLOUD_COMPARISON.md  LAB_100G_ENVIRONMENT_READINESS.md  LAB_100G_READINESS_RECHECK.md  LAB_BETA_RC_GATE.md  LAB_BOTTLENECK_REGISTER.md  LAB_CHECKSUM_COST_REVIEW.md  LAB_CHECKSUM_FINAL_VERIFY_DIAGNOSIS.md  LAB_FINAL_VERIFY_GATE.md  LAB_GRIDFLUX_PERFORMANCE_SNAPSHOT.md  LAB_MANIFEST_FLUSH_OPTIMIZATION.md  PHASE4A_BASELINE.md  PHASE4B_BOTTLENECKS.md  PHASE4C_STORAGE.md  PHASE4D_FILE_IO.md  PHASE4E_IO_URING_GATE.md  PHASE4F_IO_URING_PROTOTYPE.md  PHASE4G_IO_URING_REAL_VALIDATION.md  PHASE4H_IO_URING_QUEUE_DEPTH_PLAN.md  PHASE4H_IO_URING_QUEUE_DEPTH_RESULTS.md  PHASE4I_HEAVY_QUEUE_DEPTH_GATE.md  PHASE4J_POSIX_PIPELINE_DIAGNOSIS.md  PHASE4K_POSIX_WRITEBACK_OPTIMIZATION.md  PHASE4L_STABILITY_AND_RETR_BREAKDOWN.md  PHASE5B_TREE_DATASET_MATRIX.md  PHASE5C_TREE_ALPHA_HARDENING.md  README.md  RESULTS_INDEX.md
docs/release/: ALPHA_LIMITATIONS.md  ALPHA_READINESS.md  ALPHA_RELEASE_CANDIDATE.md  ALPHA_RELEASE_GATE.md  BETA_FREEZE.md  BETA_LIMITATIONS.md  BETA_RELEASE_CANDIDATE.md  BETA_RELEASE_GATE.md  PHASE5D_ALPHA_DEMO.md  PHASE6C_TLS_ALPHA.md  PHASE6D_DATA_TLS.md  PHASE6E_ALPHA_RC.md  README.md
include/gridflux/: version.h
src/: main.cpp
src/apps/: gridflux_checksum_bench.cpp  gridflux_client.cpp  gridflux_file_client.cpp  gridflux_file_download_client.cpp  gridflux_file_server.cpp  gridflux_gridftp_server.cpp  gridflux_server.cpp  gridflux_storage_bench.cpp  gridflux_tree_download_client.cpp  gridflux_tree_upload_client.cpp
src/checkpoint/: download_manifest.cpp  manifest_store.cpp  transfer_manifest.cpp
src/checksum/: checksum.cpp  crc32c.cpp  crc32c_hw_stub.cpp  crc32c_hw_x86.cpp
src/common/: throughput_counter.cpp  version.cpp
src/config/: file_download_options.cpp  file_transfer_options.cpp  sink_options.cpp  tree_transfer_options.cpp
src/storage/: file_io.cpp  file_io_uring.cpp  file_io_uring_stub.cpp  posix_file.cpp  preallocate_mode.cpp
tests/unit/: checksum_test.cpp  chunk_planner_test.cpp  connection_context_test.cpp  control_command_test.cpp  control_options_test.cpp  control_session_test.cpp  download_manifest_test.cpp  download_session_test.cpp  event_log_test.cpp  file_download_options_test.cpp  file_io_test.cpp  file_transfer_options_test.cpp  frame_test.cpp  framed_data_socket_test.cpp  manifest_store_test.cpp  posix_file_test.cpp  range_list_test.cpp  sink_options_test.cpp  throughput_counter_test.cpp  transfer_manifest_test.cpp  transfer_progress_test.cpp  transfer_session_test.cpp  tree_manifest_test.cpp  tree_scan_test.cpp  tree_transfer_options_test.cpp  version_test.cpp
tools/benchmark/: run_checksum_bench.py  run_storage_bench.py  test_run_storage_bench.py
tools/demo/: make_demo_dataset.py  run_alpha_demo.py  test_alpha_demo.py
tools/perf/: analyze_beta1a.py  analyze_beta1b_receiver_writeback.py  analyze_beta1b_receiver_writeback_stability.py  analyze_beta1b_stor_writeback.py  analyze_beta1b_storage_system.py  analyze_beta1c_retr_stability.py  analyze_cloud_disk_bottleneck_proof.py  analyze_gridftp_vs_gridflux_cloud.py  analyze_lab_final_verify_gate.py  analyze_lab_manifest_flush_stability.py  analyze_phase4e.py  analyze_phase4i.py  analyze_phase4j.py  analyze_phase4k.py  analyze_phase4l.py  analyze_phase5b.py  analyze_phase5c.py  collect_env.sh  plot_cloud_disk_bottleneck_proof.py  plot_gridftp_vs_gridflux_cloud.py  plot_three_way_comparison.py  run_baseline_ftp_gridftp_smoke.py  run_beta1a_private_readiness.py  run_beta1b_stor_writeback.py  run_beta1b_storage_system_probe.py  run_beta1c_retr_stability.py  run_cloud_disk_bottleneck_proof.py  run_file_loopback_matrix.py  run_file_private_once.sh  run_gridftp_private_matrix.py  run_gridftp_tree_private_matrix.py  run_gridftp_vs_gridflux_cloud_matrix.py  run_lab_gridflux_profile.py  run_loopback_matrix.py  run_private_host_baseline.py  run_private_once.sh  run_three_way_ftp_gridftp_gridflux.py  sync_remote.sh  test_beta1a_helpers.py  test_beta1b_stor_writeback.py  (+3 more)
tools/release/: check_public_hygiene.py  check_remote_artifact_sync.py  export_public_repo.py  remote_auth.py  run_alpha_release_candidate.py  run_alpha_release_gate.py  run_beta_freeze_check.py  run_beta_release_candidate.py  run_beta_release_gate.py  sync_remote_artifacts.py  test_alpha_release_helpers.py  test_beta_release_helpers.py  test_public_hygiene.py
tools/test/: run_alpha_soak_smoke.py  run_beta_long_soak.py  run_file_checksum_private_once.sh  run_file_checksum_smoke.sh  run_file_resume_smoke.sh  run_file_transfer_smoke.sh  run_gridftp_control_list_smoke.py  run_gridftp_control_metadata_private_once.py  run_gridftp_control_metadata_smoke.py  run_gridftp_control_private_once.py  run_gridftp_control_resume_smoke.py  run_gridftp_control_retr_corrupt_resume_smoke.py  run_gridftp_control_retr_private_once.py  run_gridftp_control_retr_resume_smoke.py  run_gridftp_control_retr_smoke.py  run_gridftp_control_stor_smoke.py  run_gridftp_control_tls_private_once.py  run_gridftp_control_tls_smoke.py  run_gridftp_data_tls_private_once.py  run_gridftp_data_tls_resume_smoke.py  run_gridftp_data_tls_smoke.py  run_gridftp_event_log_smoke.py  run_gridftp_tree_changed_file_smoke.py  run_gridftp_tree_download_smoke.py  run_gridftp_tree_edge_cases_smoke.py  run_gridftp_tree_parallel_smoke.py  (+7 more)
(+76 files in other folders)
